# asaas-sdk

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py  create_payment.py  subscriptions.py  webhooks.py
src/asaas/: __init__.py  client.py  exceptions.py  http_client.py  pagination.py
src/asaas/resources/: __init__.py  accounts.py  anticipations.py  base.py  bill.py  chargebacks.py  checkouts.py  credit_bureau_report.py  credit_card.py  customers.py  escrow.py  finance.py  financial_transactions.py  fiscal_info.py  installments.py  invoices.py  lean.py  mobile_phone_recharges.py  my_account.py  notifications.py  payment_dunnings.py  payment_links.py  payments.py  pix.py  sandbox.py  subscriptions.py  transfers.py  wallets.py  webhooks.py
tests/: conftest.py  test_client.py  test_customers.py  test_payments.py  test_subscriptions.py
